--- a/src/index.html
+++ b/src/index.html
@@ -248,26 +248,31 @@
             </div>
         </section>
     </main>
-    <footer class="bg-orange-600">
-        <div class="flex items-center justify-around text-white text-lg py-10">
-            <div>
-                <h1>Bon Appetit</h1>
+    <footer class="bg-orange-200">
+        <div class="flex items-center justify-between text-indigo-1000 text-lg py-10 lg:px-24 md:px-10 sm:px-5 max-sm:px-5">
+            <div class="flex gap-20 items-center">
+                <h1 class="text-2xl font-bold">Bon Appetit</h1>
+                <div class="flex gap-5 flex-row">
+                    <a href="#" class="hover:text-indigo-400 transition-all">Recipes</a>
+                    <a href="#" class="hover:text-indigo-400 transition-all">Vegan</a>
+                    <a href="#" class="hover:text-indigo-400 transition-all">Dinner</a>
+                    <a href="#" class="hover:text-indigo-400 transition-all">Contact</a>
+                </div>
             </div>
-            <div>
-                <h1>Links</h1>
-                <ul>
-                    <li>test</li>
-                    <li>test</li>
-                    <li>test</li>
-                </ul>
+           <div class="flex gap-3 items-center">
+               <p class="text-base font-medium">Subscribe to our newsletter</p>
+               <input type="text" placeholder="Your E-Mail" class="py-1 px-3 rounded-full placeholder:font-medium placeholder:text-slate-400 placeholder:italic">
+               <button class="py-2 px-3 border border-indigo-1000 text-indigo-1000 rounded-full font-bold text-sm transition-all hover:bg-indigo-1000 hover:text-white max-sm:hidden sm:hidden md:block lg:block"><i class="fa-solid fa-envelope"></i></button>
             </div>
-            <div>
-                <h1>More</h1>
-                <ul>
-                    <li>test</li>
-                    <li>test</li>
-                    <li>test</li>
-                </ul>
+        </div>
+        <div class="border border-indigo-1000"></div>
+        <div class="flex items-center justify-between text-indigo-1000 text-lg py-5 lg:px-24 md:px-10 sm:px-5 max-sm:px-5">
+            <p class="text-sm">bon appetit © 2024</p>
+            <div class="socials">
+                <a href="" class="text-xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-facebook"></i></a>
+                <a href="" class="text-xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="" class="text-xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-youtube"></i></a>
+                <a href="" class="text-xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-pinterest"></i></a>
             </div>
         </div>
     </footer>
