--- a/src/index.html
+++ b/src/index.html
@@ -249,20 +249,20 @@
         </section>
     </main>
     <footer class="bg-orange-200">
-        <div class="flex items-center justify-between text-indigo-1000 text-lg py-10 lg:px-24 md:px-10 sm:px-5 max-sm:px-5">
-            <div class="flex gap-20 items-center">
+        <div class="flex items-center justify-between text-indigo-1000 text-lg py-10 lg:px-24 md:px-10 sm:px-5 max-sm:px-5 lg:flex-row md:flex-col sm:flex-col max-sm:flex-col">
+            <div class="flex gap-20 items-center lg:flex-row md:flex-col sm:flex-col max-sm:flex-col">
                 <h1 class="text-2xl font-bold">Bon Appetit</h1>
-                <div class="flex gap-5 flex-row">
+                <div class="flex gap-5 flex-row lg:flex-row md:flex-col sm:flex-col max-sm:flex-col">
                     <a href="#" class="hover:text-indigo-400 transition-all">Recipes</a>
                     <a href="#" class="hover:text-indigo-400 transition-all">Vegan</a>
                     <a href="#" class="hover:text-indigo-400 transition-all">Dinner</a>
                     <a href="#" class="hover:text-indigo-400 transition-all">Contact</a>
                 </div>
             </div>
-           <div class="flex gap-3 items-center">
+           <div class="flex gap-3 items-center lg:flex-row md:flex-col sm:flex-col max-sm:flex-col">
                <p class="text-base font-medium">Subscribe to our newsletter</p>
                <input type="text" placeholder="Your E-Mail" class="py-1 px-3 rounded-full placeholder:font-medium placeholder:text-slate-400 placeholder:italic">
-               <button class="py-2 px-3 border border-indigo-1000 text-indigo-1000 rounded-full font-bold text-sm transition-all hover:bg-indigo-1000 hover:text-white max-sm:hidden sm:hidden md:block lg:block"><i class="fa-solid fa-envelope"></i></button>
+               <button class="py-2 px-3 border border-indigo-1000 text-indigo-1000 rounded-full font-bold text-sm transition-all hover:bg-indigo-1000 hover:text-white"><i class="fa-solid fa-envelope"></i></button>
             </div>
         </div>
         <div class="border border-indigo-1000"></div>
