--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                             <img class="w-full h-48 object-cover rounded-lg brightness-75 hover:brightness-100 transition-all" src="https://www.kindernetz.de/sendungen/schmecksplosion/1605000762801%2Cimage-knet-2538~_v-1x1@2dL_-029cdd853d61a51824ed2ee643deeae504b065c1.jpg" />
                         </a>
                     </div>
-                    <a href="recipe-1.html" class="text-2xl font-medium text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Full Recipeefefefefefefef</a>
+                    <a href="recipe-1.html" class="text-2xl font-medium text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Hamburger Recipe</a>
                     <div class="author-stats flex justify-between mt-5 mb-5 align-center items-center">
                         <div class="author flex flex-row items-center gap-3">
                             <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
@@ -80,7 +80,7 @@
                             <img class="w-full h-48 object-cover rounded-lg brightness-75 hover:brightness-100 transition-all" src="https://www.kindernetz.de/sendungen/schmecksplosion/1605000762801%2Cimage-knet-2538~_v-1x1@2dL_-029cdd853d61a51824ed2ee643deeae504b065c1.jpg" />
                         </a>
                     </div>
-                    <a href="recipe-1.html" class="text-2xl font-medium text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Full Recipeefefefefefefef</a>
+                    <a href="recipe-1.html" class="text-2xl font-medium text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Hamburger Recipe</a>
                     <div class="author-stats flex justify-between mt-5 mb-5 align-center items-center">
                         <div class="author flex flex-row items-center gap-3">
                             <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
@@ -102,7 +102,7 @@
                             <img class="w-full h-48 object-cover rounded-lg brightness-75 hover:brightness-100 transition-all" src="https://www.kindernetz.de/sendungen/schmecksplosion/1605000762801%2Cimage-knet-2538~_v-1x1@2dL_-029cdd853d61a51824ed2ee643deeae504b065c1.jpg" />
                         </a>
                     </div>
-                    <a href="recipe-1.html" class="text-2xl font-medium text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Full Recipeefefefefefefef</a>
+                    <a href="recipe-1.html" class="text-2xl font-medium text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Hamburger Recipe</a>
                     <div class="author-stats flex justify-between mt-5 mb-5 align-center items-center">
                         <div class="author flex flex-row items-center gap-3">
                             <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
@@ -124,7 +124,7 @@
                             <img class="w-full h-48 object-cover rounded-lg brightness-75 hover:brightness-100 transition-all" src="https://www.kindernetz.de/sendungen/schmecksplosion/1605000762801%2Cimage-knet-2538~_v-1x1@2dL_-029cdd853d61a51824ed2ee643deeae504b065c1.jpg" />
                         </a>
                     </div>
-                    <a href="recipe-1.html" class="text-2xl font-medium text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Full Recipeefefefefefefef</a>
+                    <a href="recipe-1.html" class="text-2xl font-medium text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Hamburger Recipe</a>
                     <div class="author-stats flex justify-between mt-5 mb-5 align-center items-center">
                         <div class="author flex flex-row items-center gap-3">
                             <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80">
@@ -158,7 +158,7 @@
                         </div>
                         <img class="w-full h-48 object-cover rounded-lg brightness-75" src="https://www.kindernetz.de/sendungen/schmecksplosion/1605000762801%2Cimage-knet-2538~_v-1x1@2dL_-029cdd853d61a51824ed2ee643deeae504b065c1.jpg" />
                     </div>
-                    <a href="#" class="text-2xl font-bold text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Full Recipeefefefefefefef</a>
+                    <a href="recipe-1.html" class="text-2xl font-medium text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Hamburger Recipe</a>
                     <div class="author-stats flex justify-between mt-5 mb-5 align-center items-center">
                         <div class="recipe-stats flex flex-row items-center gap-3">
                             <i class="fa-solid fa-hourglass-start text-gray-500"></i><span class="text-gray-500">15-20 min</span>
@@ -182,7 +182,7 @@
                         </div>
                         <img class="w-full h-48 object-cover rounded-lg brightness-75" src="https://www.kindernetz.de/sendungen/schmecksplosion/1605000762801%2Cimage-knet-2538~_v-1x1@2dL_-029cdd853d61a51824ed2ee643deeae504b065c1.jpg" />
                     </div>
-                    <a href="#" class="text-2xl font-bold text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Full Recipeefefefefefefef</a>
+                    <a href="recipe-1.html" class="text-2xl font-medium text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Hamburger Recipe</a>
                     <div class="author-stats flex justify-between mt-5 mb-5 align-center items-center">
                         <div class="recipe-stats flex flex-row items-center gap-3">
                             <i class="fa-solid fa-hourglass-start text-gray-500"></i><span class="text-gray-500">25-30 min</span>
@@ -206,7 +206,7 @@
                         </div>
                         <img class="w-full h-48 object-cover rounded-lg brightness-75" src="https://www.kindernetz.de/sendungen/schmecksplosion/1605000762801%2Cimage-knet-2538~_v-1x1@2dL_-029cdd853d61a51824ed2ee643deeae504b065c1.jpg" />
                     </div>
-                    <a href="#" class="text-2xl font-bold text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Full Recipeefefefefefefef</a>
+                    <a href="recipe-1.html" class="text-2xl font-medium text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Hamburger Recipe</a>
                     <div class="author-stats flex justify-between mt-5 mb-5 align-center items-center">
                         <div class="recipe-stats flex flex-row items-center gap-3">
                             <i class="fa-solid fa-hourglass-start text-gray-500"></i><span class="text-gray-500">35-40 min</span>
@@ -229,7 +229,7 @@
                         </div>
                         <img class="w-full h-48 object-cover rounded-lg brightness-75" src="https://www.kindernetz.de/sendungen/schmecksplosion/1605000762801%2Cimage-knet-2538~_v-1x1@2dL_-029cdd853d61a51824ed2ee643deeae504b065c1.jpg" />
                     </div>
-                    <a href="#" class="text-2xl font-bold text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Full Recipeefefefefefefef</a>
+                    <a href="recipe-1.html" class="text-2xl font-medium text-orange-600 hover:text-orange-400 transition-all truncate mt-5">Hamburger Recipe</a>
                     <div class="author-stats flex justify-between mt-5 mb-5 align-center items-center">
                         <div class="recipe-stats flex flex-row items-center gap-3">
                             <i class="fa-solid fa-hourglass-start text-gray-500"></i><span class="text-gray-500">25-30 min</span>
@@ -266,13 +266,13 @@
             </div>
         </div>
         <div class="border border-indigo-1000"></div>
-        <div class="flex items-center justify-between text-indigo-1000 text-lg py-5 lg:px-24 md:px-10 sm:px-5 max-sm:px-5">
+        <div class="flex flex-col gap-5 items-center justify-between text-indigo-1000 text-lg py-7 lg:px-24 md:px-10 sm:px-5 max-sm:px-5">
             <p class="text-sm">bon appetit © 2024</p>
             <div class="socials">
-                <a href="" class="text-xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-facebook"></i></a>
-                <a href="" class="text-xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="" class="text-xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-youtube"></i></a>
-                <a href="" class="text-xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-pinterest"></i></a>
+                <a href="" class="text-2xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-facebook"></i></a>
+                <a href="" class="text-2xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="" class="text-2xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-youtube"></i></a>
+                <a href="" class="text-2xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-pinterest"></i></a>
             </div>
         </div>
     </footer>
