--- a/src/recipe-1.html
+++ b/src/recipe-1.html
@@ -73,8 +73,110 @@
                         <p class="text-gray-400 font-md">485</p>
                     </div>
                 </div>
+                <div class="recipe-buttons flex mt-5 items-center justify-center gap-5">
+                    <button class="bg-orange-600 text-base px-8 py-5 rounded-md text-white "><i class="fa-regular fa-bookmark"></i> Save this Recipe</button>
+                    <a href="#"><i class="fa-solid fa-print text-orange-600"></i> Print</a>
+                    <a href="#"><i class="fa-solid fa-share-nodes text-orange-600"></i> Share</a>
+                </div>
             </div>
         </div>
+        <div class="recipe-about grid grid-cols-2 gap-10 mt-20 lg:grid-cols-2 md:grid-cols-2 sm:grid-cols-1 max-sm:grid-cols-1">
+            <div class="flex flex-col">
+                <h3 class="text-2xl text-orange-600 font-bold mb-5"><span class="bg-orange-600 text-zinc-50 font-bold rounded-md py-1 px-2.5 mr-2"><i class="fa-solid fa-kitchen-set"></i></span> Directions</h3>
+                <img class="min-w-full h-96 object-cover rounded-lg brightness-75 hover:brightness-100 transition-all" src="https://www.kindernetz.de/sendungen/schmecksplosion/1605000762801%2Cimage-knet-2538~_v-1x1@2dL_-029cdd853d61a51824ed2ee643deeae504b065c1.jpg" />
+                <div class="recipe-steps flex flex-col mt-5 bg-gray-200 rounded-md py-5 px-5">
+                    <p class="text-gray-600 text-base"><span class="text-black text-lg mr-2">1</span> Tip 500g beef mince into a bowl with 1 small diced onion and 1 egg, then mix.</p>
+                    <p class="text-gray-600 text-base"><span class="text-black text-lg mr-2">2</span>  Divide the mixture into four. Lightly wet your hands. Carefully roll the mixture into balls, each about the size of a tennis ball.</p>
+                    <p class="text-gray-600 text-base"><span class="text-black text-lg mr-2">3</span> Set in the palm of your hand and gently <span class="text-orange-600">squeeze down</span> to flatten into patties about 3cm thick. Make sure all the burgers are the same thickness so that they will cook evenly. </p>
+                    <p class="text-gray-600 text-base"><span class="text-black text-lg mr-2">4</span> Put on a plate, cover with cling film and leave in the fridge to firm up for at least 30 mins.</p>
+                    <p class="text-gray-600 text-base"><span class="text-black text-lg mr-2">5</span> Heat the <span class="text-orange-600">barbecue</span> to medium hot (there will be white ash over the red hot coals – about 40 mins after lighting). Lightly <span class="text-orange-600">brush</span> one side of each burger with vegetable oil.</p>
+                    <p class="text-gray-600 text-base"><span class="text-black text-lg mr-2">6</span> Place the burgers, oil-side down, on the barbecue. Cook for 5 mins until the meat is lightly charred. Don’t move them around or they may stick.</p>
+                </div>
+            </div>
+            <div class="flex flex-col">
+                <h3 class="text-2xl text-orange-600 font-bold mb-5"><span class="bg-orange-600 text-zinc-50 font-bold rounded-md py-1 px-2.5 mr-2"><i class="fa-solid fa-basket-shopping"></i></span> Ingredients</h3>
+                <div class="recipe-steps flex flex-col bg-gray-200 rounded-md py-5 px-10 min-w-full text-gray-700">
+                    <h3 class="text-lg text-black font-bold mb-2">Toppings</h3>
+                    <div class="flex justify-between border border-b-gray-300 p-2">
+                        <span>Sliced cheese</span>
+                        <span>3</span>
+                    </div>
+                    <div class="flex justify-between border border-b-gray-300 p-2">
+                        <span>Dill pickle slices</span>
+                        <span>5</span>
+                    </div>
+                    <div class="flex justify-between border border-b-gray-300 p-2">
+                        <span>Avocado</span>
+                        <span>1</span>
+                    </div>
+                    <div class="flex justify-between  p-2">
+                        <span>Jalapeños </span>
+                        <span>3</span>
+                    </div>
+                    <h3 class="text-lg text-black font-bold mt-2 mb-2">Base</h3>
+                    <div class="flex justify-between border border-b-gray-300 p-2">
+                        <span>Ground Beef</span>
+                        <span>750g</span>
+                    </div>
+                    <div class="flex justify-between border border-b-gray-300 p-2">
+                        <span>Onions</span>
+                        <span>3</span>
+                    </div>
+                    <div class="flex justify-between border border-b-gray-300 p-2">
+                        <span>Tomato Slices</span>
+                        <span>3</span>
+                    </div>
+                    <div class="flex justify-between border border-b-gray-300 p-2">
+                        <span>Egg, beaten </span>
+                        <span>1</span>
+                    </div>
+                    <div class="flex justify-between border border-b-gray-300 p-2">
+                        <span>Garlic</span>
+                        <span>2 cloves</span>
+                    </div>
+                    <div class="flex justify-between  p-2">
+                        <span>Pepper </span>
+                        <span>⅛ teaspoon</span>
+                    </div>
+                </div>
+                <div class="quick-tip bg-indigo-1000 py-5 px-10 rounded-md text-white flex items-center gap-8 mt-5">
+                    <i class="fa-solid fa-lightbulb text-2xl"></i>
+                    <div class="flex flex-col">
+                        <h3 class="text-xl font-bold">Quick Tip for Hamburger</h3>
+                        <p class="font-normal text-gray-300">Lorem dorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum cumque perspiciatis laborum,strum quam,?</p>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
     </main>
+    <footer class="bg-white">
+        <div class="flex items-center justify-between text-indigo-1000 text-lg py-10 lg:px-24 md:px-10 sm:px-5 max-sm:px-5 lg:flex-row md:flex-col sm:flex-col max-sm:flex-col">
+            <div class="flex gap-20 items-center lg:flex-row md:flex-col sm:flex-col max-sm:flex-col">
+                <h1 class="text-2xl font-bold">Bon Appetit</h1>
+                <div class="flex gap-5 flex-row lg:flex-row md:flex-col sm:flex-col max-sm:flex-col">
+                    <a href="#" class="hover:text-indigo-400 transition-all">Recipes</a>
+                    <a href="#" class="hover:text-indigo-400 transition-all">Vegan</a>
+                    <a href="#" class="hover:text-indigo-400 transition-all">Dinner</a>
+                    <a href="#" class="hover:text-indigo-400 transition-all">Contact</a>
+                </div>
+            </div>
+           <div class="flex gap-3 items-center lg:flex-row md:flex-col sm:flex-col max-sm:flex-col">
+               <p class="text-base font-medium">Subscribe to our newsletter</p>
+               <input type="text" placeholder="Your E-Mail" class="py-1 px-3 border border-indigo-1000 rounded-full placeholder:font-medium placeholder:text-slate-400 placeholder:italic">
+               <button class="py-2 px-3 border border-indigo-1000 text-indigo-1000 rounded-full font-bold text-sm transition-all hover:bg-indigo-1000 hover:text-white"><i class="fa-solid fa-envelope"></i></button>
+            </div>
+        </div>
+        <div class="border border-indigo-1000"></div>
+        <div class="flex flex-col gap-5 items-center justify-between text-indigo-1000 text-lg py-7 lg:px-24 md:px-10 sm:px-5 max-sm:px-5">
+            <p class="text-sm">bon appetit © 2024</p>
+            <div class="socials">
+                <a href="" class="text-2xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-facebook"></i></a>
+                <a href="" class="text-2xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="" class="text-2xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-youtube"></i></a>
+                <a href="" class="text-2xl text-indigo-1000 hover:text-indigo-400 transition-all mr-2"><i class="fa-brands fa-pinterest"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
