--- a/src/recipe-1.html
+++ b/src/recipe-1.html
@@ -8,23 +8,12 @@
     <link rel="stylesheet" href="output.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
     <link rel="icon" type="image/x-icon" href="favvv.png">
-    <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                'indigo-1000': '#382C52',
-              }
-            }
-          }
-        }
-      </script>
 </head>
-<body class="m-0 p-0 box-border">
+<body class="m-0 p-0 box-border bg-snow">
     <div class="py-5 lg:px-24 md:px-10 sm:px-5 max-sm:px-5">
         <div class="navbar flex justify-between items-center">
             <div class="brand inline-flex">
-                <div class="w-8 h-8 bg-indigo-1000 text-zinc-50 font-bold rounded-md py-1 px-1 mr-2" style="padding-left: 0.3rem;">BA</div> <a href="" class="text-2xl text-indigo-1000 font-bold">Bon Appétit</a>
+                <div class="w-8 h-8 bg-indigo-1000 text-zinc-50 font-bold rounded-md py-1 px-1 mr-2" style="padding-left: 0.3rem;">BA</div> <a href="index.html" class="text-2xl text-indigo-1000 font-bold">Bon Appétit</a>
             </div>
             <div class="right-menu flex justify-normal items-center gap-5">
                 <div class="search">
@@ -74,16 +63,18 @@
                     </div>
                 </div>
                 <div class="recipe-buttons flex mt-5 items-center justify-center gap-5">
-                    <button class="bg-orange-600 text-base px-8 py-5 rounded-md text-white "><i class="fa-regular fa-bookmark"></i> Save this Recipe</button>
-                    <a href="#"><i class="fa-solid fa-print text-orange-600"></i> Print</a>
-                    <a href="#"><i class="fa-solid fa-share-nodes text-orange-600"></i> Share</a>
+                    <button class="bg-orange-600 text-base px-8 py-5 rounded-md text-white hover:bg-orange-500 transition-all"><i class="fa-regular fa-bookmark"></i> Save this Recipe</button>
+                    <a href="#" class="hover:text-orange-600 transition-all"><i class="fa-solid fa-print text-orange-600"></i> Print</a>
+                    <a href="#" class="hover:text-orange-600 transition-all"><i class="fa-solid fa-share-nodes text-orange-600"></i> Share</a>
                 </div>
             </div>
         </div>
         <div class="recipe-about grid grid-cols-2 gap-10 mt-20 lg:grid-cols-2 md:grid-cols-2 sm:grid-cols-1 max-sm:grid-cols-1">
             <div class="flex flex-col">
                 <h3 class="text-2xl text-orange-600 font-bold mb-5"><span class="bg-orange-600 text-zinc-50 font-bold rounded-md py-1 px-2.5 mr-2"><i class="fa-solid fa-kitchen-set"></i></span> Directions</h3>
-                <img class="min-w-full h-96 object-cover rounded-lg brightness-75 hover:brightness-100 transition-all" src="https://www.kindernetz.de/sendungen/schmecksplosion/1605000762801%2Cimage-knet-2538~_v-1x1@2dL_-029cdd853d61a51824ed2ee643deeae504b065c1.jpg" />
+                <div class="flex justify-center items-center cursor-pointer min-w-full h-96 object-cover rounded-lg brightness-75 hover:brightness-100 transition-all" style="background-image:url('https://www.thespruceeats.com/thmb/YZJwyARPyAR3T_gzEr_Mo_p5grU=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Burgers-on-Grill-585751915f9b586e029dc4a1.jpg');background-size:cover">
+                    <i class="fa-solid fa-play-circle text-8xl text-white"></i>
+                </div>
                 <div class="recipe-steps flex flex-col mt-5 bg-gray-200 rounded-md py-5 px-5">
                     <p class="text-gray-600 text-base"><span class="text-black text-lg mr-2">1</span> Tip 500g beef mince into a bowl with 1 small diced onion and 1 egg, then mix.</p>
                     <p class="text-gray-600 text-base"><span class="text-black text-lg mr-2">2</span>  Divide the mixture into four. Lightly wet your hands. Carefully roll the mixture into balls, each about the size of a tennis ball.</p>
@@ -150,7 +141,7 @@
             
         </div>
     </main>
-    <footer class="bg-white">
+    <footer class="mt-5">
         <div class="flex items-center justify-between text-indigo-1000 text-lg py-10 lg:px-24 md:px-10 sm:px-5 max-sm:px-5 lg:flex-row md:flex-col sm:flex-col max-sm:flex-col">
             <div class="flex gap-20 items-center lg:flex-row md:flex-col sm:flex-col max-sm:flex-col">
                 <h1 class="text-2xl font-bold">Bon Appetit</h1>
